search sorta works but not really. got rid of all newlines and extra spaces in post content. need to test bug where liking is deleting the post on firefox.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -449,11 +449,6 @@ $border-r: 3px;
     border-bottom: 1px solid #2d2d2d !important;
   }
 
-  .users, 
-  #messenger>.search {
-    // border-left: 1px solid #1D2025 !important;
-  }
-
   .users>.user {
     border-bottom: 1px solid #2D2D2D !important;
     &:hover {
